--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.14.0",
     "react-flexbox-grid": "^2.0.0",
+    "react-native-chatbot": "0.0.1-alpha.12",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.17",
+    "react-simple-chatbot": "^0.6.1",
     "react-video-recorder": "^3.17.2",
     "react-webcam": "^5.2.3",
     "redux": "^3.7.2",
